--- a/src/components/ProductInfo/ProductInfo.module.scss
+++ b/src/components/ProductInfo/ProductInfo.module.scss
@@ -1,8 +1,7 @@
 .main {
-  min-width: 30vw;
   position: relative;
   top: 20px;
-  right: 30px;
+  right: 0px;
 }
 
 .Button {
