--- a/src/components/TheLooney/TheLooney.module.scss
+++ b/src/components/TheLooney/TheLooney.module.scss
@@ -3,8 +3,7 @@
   height: 100px;
   width: 100px;
   position: absolute;
-  right: 70px;
-  margin-left: 50px;
+  right: 20vw;
 }
 
 .pennywise {
